--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,10 +28,10 @@
       <br />
       <input type="submit" value="Submit" class="ui button">
     </form>
-    
+
     <br />
 
-    <textarea cols="100" rows="40" readonly id="text"><%= text %></textarea>
+    <textarea readonly id="text"><%= text %></textarea>
     <button id="copy" type="button" onclick="copy()" class="ui button">Copy</button>
 
 
